--- a/public/screen.css
+++ b/public/screen.css
@@ -1,12 +1,15 @@
 :root {
-  font: 16px / 1 sans-serif;
+  font: 50px / 1 sans-serif;
+  color: #e9cc69;
 }
 
 html {
-  height: 100%;
 }
 
 body {
   margin: 0;
   min-height: 100%;
+  text-align: center;
+  background-color: #086f36;
+  box-shadow: 20%;
 }
