--- a/public/screen.css
+++ b/public/screen.css
@@ -13,3 +13,21 @@ body {
   background-color: #086f36;
   box-shadow: 20%;
 }
+
+#playerDiv {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid black;
+}
+
+#dealerDiv {
+  position: absolute;
+  top: 280px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid black;
+}
