--- a/public/screen.css
+++ b/public/screen.css
@@ -1,7 +1,7 @@
-:root {
+/*:root {
   font: 50px / 1 sans-serif;
   color: #e9cc69;
-}
+}*/
 
 html {
 }
@@ -14,20 +14,55 @@ body {
   box-shadow: 20%;
 }
 
+#headerDiv {
+  position: absolute;
+  top: 10px;
+  left: 50px;
+  width: 800px;
+  height: 50px;
+  border: 3px solid red;
+}
+
 #playerDiv {
   position: absolute;
-  top: 80px;
-  right: 0;
-  width: 200px;
-  height: 100px;
+  top: 100px;
+  left: 50px;
+  width: 800px;
+  height: 150px;
+  border: 3px solid black;
+}
+
+#playerScore {
+  position: absolute;
+  top: 250px;
+  left: 50px;
+  width: 800px;
+  height: 50px;
   border: 3px solid black;
 }
 
 #dealerDiv {
   position: absolute;
-  top: 280px;
-  right: 0;
-  width: 200px;
-  height: 100px;
+  top: 350px;
+  left: 50px;
+  width: 800px;
+  height: 150px;
   border: 3px solid black;
+}
+#dealerScore {
+  position: absolute;
+  top: 500px;
+  left: 50px;
+  width: 800px;
+  height: 50px;
+  border: 3px solid black;
+}
+
+#buttonsDiv {
+  position: absolute;
+  top: 570px;
+  left: 50px;
+  width: 800px;
+  height: 100px;
+  border: 3px solid blue;
 }
